tests/negative/gold/type_no_force_test.gold
tests/negative/type_no_force_test.toit:8:7: error: Type mismatch. Expected 'int'. Got 'string'
  foo "str"
      ^~~~~
Compilation failed.
